# mcp-duckduckgo

./: .actrc  .dockerignore  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  DEPLOYMENT-2025.md  Dockerfile  IMPLEMENTATION-SUMMARY-2025.md  Makefile  README.md  SECURITY-2025.md  docker-compose.yml  openapi.yml  pyproject.toml  smithery.yaml
.github/: codeql-config.yml
.github/workflows/: ci.yml  docker.yml  maintenance.yml  performance.yml  release.yml  security.yml
mcp_duckduckgo/: __init__.py  __main__.py  config.py  context_utils.py  enrichment.py  exceptions.py  http.py  intent.py  knowledge_graph.py  main.py  models.py  monitoring.py  prompts.py  rerank.py  resources.py  search.py  security.py  semantic_cache.py  server.py  tools.py  typing_utils.py
mcp_duckduckgo/orchestration/: __init__.py  flow.py
mcp_duckduckgo/sandbox/: __init__.py  snapshots.py
mcp_duckduckgo/tools/: __init__.py  health.py  location.py  research.py  search.py  summarize.py  technical.py  utils.py  validate.py
monitoring/: prometheus.yml
tests/: conftest.py  test_enrichment.py  test_integration.py  test_knowledge_graph.py  test_orchestration.py  test_property_based.py  test_real_search.py  test_research_tool.py  test_resources_and_main.py  test_sandbox.py  test_search.py  test_semantic_cache.py  test_tools.py  test_utils_module.py
